gcc/testsuite/rust/rustc/ui/const-generics/issue-93647_dg.rs
struct X<const N: usize = {
    (||1usize)()
// { dg-error ".E0015." "" { target *-*-* } .-1 }
}>;

fn main() {}

